Fixed z-index

--- a/tanuarta/src/Components/Header.module.scss
+++ b/tanuarta/src/Components/Header.module.scss
@@ -7,6 +7,7 @@
   top: 0;
   transition: .7s;
   background-color: transparent;
+  z-index: 100;
 }
 
 .headerChange {
